# ultiproxy

./: .dockerignore  ARCHITECTURE_PLAN.md  Cargo.toml  DEPLOYMENT.md  DOCKER_BUILD.md  Dockerfile  PHASE2_IMPLEMENTATION_PLAN.md  README.md  deploy.ps1  deploy.sh  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: docker-build.yml
config/: ultiproxy.toml
examples/: api_keys.txt  headers.txt
src/: main.rs
src/api/: middleware.rs  mod.rs  types.rs  websocket.rs
src/api/handlers/: config.rs  content.rs  metrics.rs  mod.rs  rules.rs
src/config/: mod.rs  types.rs  watcher.rs
src/content/: cache.rs  mod.rs  sources.rs
src/proxy/: engine.rs  mod.rs  round_robin.rs  router.rs
web-ui/: .dockerignore  .env.example  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.ts
web-ui/public/: index.html
web-ui/src/: App.tsx  main.tsx  theme.ts
web-ui/src/components/: Layout.tsx  Navigation.tsx  RuleEditor.tsx
web-ui/src/components/charts/: GaugeChart.tsx  MetricsChart.tsx
web-ui/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
web-ui/src/config/: env.ts
web-ui/src/hooks/: useDashboardStats.ts  useMonitoring.ts  useRules.ts
web-ui/src/pages/: Config.tsx  Configuration.tsx  ContentSources.tsx  Dashboard.tsx  Logs.tsx  Monitoring.tsx  Rules.tsx  SystemStatus.tsx
web-ui/src/services/: api.ts  types.ts  websocket.ts
web-ui/src/stores/: configStore.ts  metricsStore.ts  rulesStore.ts  uiStore.ts
web-ui/src/types/: api.ts
