[package]
name = "ultiproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "6.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"
dashmap = "5.0"
futures = "0.3"
metrics = "0.22"
